@@ -57,13 +57,35 @@ task test3 (dependsOn: ['build', 'cleanTmp']) << {
 
 task test4 (dependsOn: ['build', 'cleanTmp']) << {
     def command =
-            """
+    """
     java
 	-Xms10m -Xmx10m -XX:PermSize=10M -XX:MaxPermSize=10M
     -XX:+HeapDumpOnOutOfMemoryError
     -cp ${jar.archivePath};${findPath('commons-io')}
     by.rudko.memory.Test4_PermGenError
     """
+    execute command
+}
+
+task test5 (dependsOn: ['build', 'cleanTmp']) << {
+    def command =
+    """
+    java
+	-Xms10m -Xmx10m -XX:PermSize=10M -XX:MaxPermSize=10M
+    -XX:+HeapDumpOnOutOfMemoryError
+    -cp ${jar.archivePath};${findPath('commons-io')}
+    by.rudko.memory.Test5_PermGenError
+    """
+    execute command
+}
+
+task test6 (dependsOn: ['build', 'cleanTmp']) << {
+    def command =
+    """
+	java
+	-cp ${jar.archivePath}
+	by.rudko.memory.Test6_References
+	"""
     execute command
 }
 
